# tsc-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml  verify.sh
tsrs2/: Cargo.toml  STAGE  diag-families.json  escapes.toml  fn-dispositions.toml  m5-canaries.txt  m6-canaries.txt  m8-emitter-dispositions.json  m8-emitter-inventory.json  m8-evidence.json  m8-scope.json  nodes-missing-fields.txt  ratchet.toml  symbol-diff-known.txt
tsrs2/crates/binder/: Cargo.toml
tsrs2/crates/binder/src/: assignment.rs  bind.rs  containers.rs  declare.rs  flow.rs  lib.rs  node_util.rs  symbols.rs
tsrs2/crates/checker/: Cargo.toml
tsrs2/crates/checker/src/: access.rs  annotate.rs  calls.rs  check.rs  class.rs  conditional.rs  constraints.rs  contextual.rs  elaboration.rs  engine.rs  evaluate.rs  expr.rs  facts.rs  flow.rs  functions.rs  globals.rs  indexed.rs  inference.rs  instantiate.rs  intersect.rs  iterate.rs  js_grammar.rs  jsx.rs  lib.rs  lib_globals.rs  links.rs  literals.rs  mapped.rs  merge.rs  modules.rs  narrow.rs  operators.rs  plain_js_errors.rs  program.rs  relate.rs  relpin.rs  resolve.rs  speculate.rs  spell.rs  state.rs  (+5 more)
tsrs2/crates/conformance/: Cargo.toml  identity-vectors-v1.json
tsrs2/crates/conformance/src/: families.rs  goldens_diff.rs  identity.rs  lib.rs  ratchet.rs  scope.rs  shadow_diff.rs
tsrs2/crates/diags/: Cargo.toml
tsrs2/crates/diags/src/: gen.rs  lib.rs  line_map.rs
tsrs2/crates/fuzz/: Cargo.toml
tsrs2/crates/fuzz/src/: lib.rs
tsrs2/crates/harness/: Cargo.toml
tsrs2/crates/harness/src/: lib.rs
tsrs2/crates/oracle/: Cargo.toml  ast-dump.mjs  driver.mjs  emitter-inventory.mjs  files-dump.mjs  identity.mjs  program-host.mjs  recovery-dump.mjs  schema-dump.mjs  symbol-dump.mjs  token-dump.mjs
tsrs2/crates/oracle/src/: lib.rs
tsrs2/crates/syntax/: Cargo.toml  nodes.schema.json
tsrs2/crates/syntax/src/: arena.rs  chars.rs  for_each_child.rs  keywords.rs  kind.rs  lib.rs  nodes.rs  parser.rs  scanner.rs  tokens.rs
tsrs2/crates/types/: Cargo.toml
tsrs2/crates/types/src/: flags.rs  lib.rs  options.rs  tables.rs  ty.rs
tsrs2/crates/xtask/: Cargo.toml
tsrs2/crates/xtask/src/: main.rs  recovery_census.rs  relpin.rs  symbol_audit.rs
tsrs2/goldens/conformance/: fixSignatureCaching.ts.json.zst  inferFromBindingPattern.ts.json.zst
tsrs2/goldens/conformance/Symbols/: ES5SymbolProperty1.ts.json.zst  ES5SymbolProperty2.ts.json.zst  ES5SymbolProperty3.ts.json.zst  ES5SymbolProperty4.ts.json.zst  ES5SymbolProperty5.ts.json.zst  ES5SymbolProperty6.ts.json.zst  ES5SymbolProperty7.ts.json.zst  ES5SymbolType1.ts.json.zst
tsrs2/goldens/conformance/additionalChecks/: noPropertyAccessFromIndexSignature1.ts.json.zst
tsrs2/goldens/conformance/ambient/: ambientDeclarations.ts.json.zst  ambientDeclarationsExternal.ts.json.zst  ambientDeclarationsPatterns.ts.json.zst  ambientDeclarationsPatterns_merging1.ts.json.zst  ambientDeclarationsPatterns_merging2.ts.json.zst  ambientDeclarationsPatterns_merging3.ts.json.zst  ambientDeclarationsPatterns_tooManyAsterisks.ts.json.zst  ambientEnumDeclaration1.ts.json.zst  ambientEnumDeclaration2.ts.json.zst  ambientErrors.ts.json.zst  ambientExternalModuleInsideNonAmbient.ts.json.zst  ambientExternalModuleInsideNonAmbientExternalModule.ts.json.zst  ambientExternalModuleMerging.ts.json.zst  ambientInsideNonAmbient.ts.json.zst  ambientInsideNonAmbientExternalModule.ts.json.zst  ambientModuleDeclarationWithReservedIdentifierInDottedPath.ts.json.zst  ambientModuleDeclarationWithReservedIdentifierInDottedPath2.ts.json.zst  ambientShorthand.ts.json.zst  ambientShorthand_declarationEmit.ts.json.zst  ambientShorthand_duplicate.ts.json.zst  ambientShorthand_merging.ts.json.zst  ambientShorthand_reExport.ts.json.zst
tsrs2/goldens/conformance/async/: asyncFunctionDeclarationParameterEvaluation.ts.json.zst
tsrs2/goldens/conformance/asyncGenerators/: asyncGeneratorGenericNonWrappedReturn.ts.json.zst  asyncGeneratorParameterEvaluation.ts.json.zst  asyncGeneratorPromiseNextType.ts.json.zst
tsrs2/goldens/conformance/classes/: awaitAndYieldInProperty.ts.json.zst  classExpression.ts.json.zst  mixinAbstractClasses.2.ts.json.zst  mixinAbstractClasses.ts.json.zst  mixinAbstractClassesReturnTypeInference.ts.json.zst  mixinAccessModifiers.ts.json.zst  mixinAccessors1.ts.json.zst  mixinAccessors2.ts.json.zst  mixinAccessors3.ts.json.zst  mixinAccessors4.ts.json.zst  mixinAccessors5.ts.json.zst  mixinClassesAnnotated.ts.json.zst  mixinClassesAnonymous.ts.json.zst  mixinClassesMembers.ts.json.zst  mixinWithBaseDependingOnSelfNoCrash1.ts.json.zst  nestedClassDeclaration.ts.json.zst
tsrs2/pins/: recovery.json  relations.toml
tsrs2/ratchets/: conformance-matches.v1.json.zst  oracle-inputs.v1.json.zst
(+6426 files in other folders)
