[package]
name = "tsrs2-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "tsrs2_conformance"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tsrs2-checker = { path = "../checker" }
tsrs2-diags = { path = "../diags" }
tsrs2-harness = { path = "../harness" }
tsrs2-oracle = { path = "../oracle" }
zstd = "0.13"
