[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
sha2 = "0.10"
tsrs2-checker = { path = "../checker" }
tsrs2-conformance = { path = "../conformance" }
tsrs2-diags = { path = "../diags" }
tsrs2-harness = { path = "../harness" }
tsrs2-oracle = { path = "../oracle" }
tsrs2-syntax = { path = "../syntax" }
